--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<nav>
 		<a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Home</a>
 		<a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>About us</a>
-		<a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Contact us></a>
+		<a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Contact us</a>
 		</nav>
 	<h1>3 random images</h1>
 	<img src=https://picsum.photos/id/123/200/300 alt=image1>
